2009-01-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/Include.h: If the user defines STATIC_MAGICK in his
	project, then the Windows DLL decorations are ignored.  Without
	this, Windows DLL-based code can't use a static GraphicsMagick.
	This is recommended by SourceForge bug 2537627.

	* lib/Magick++/Drawable.h: Apparently the only STL container which
	may be DLL-exported is <vector> but we are using <list> so disable
	DLL-export of list-based template objects.

2008-10-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Color.cpp: Added an _isValid boolean to represent an invalid
	color.  Transparent black is no longer special and can be used in
	drawing.
	* lib/Pixels.cpp: Update to use new cache view interfaces provided
	by GraphicsMagick 1.3.

2008-09-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (addNoiseChannel): New method to add noise to a
	specified channel.
	(blurChannel): New method to blur a specified channel.
	(gaussianBlurChannel): New method to gaussian blur a specified
	channel.
	(motionBlur): New method to motion blur the image.
	(randomThresholdChannel): New method to apply random thresholding
	or ordered dithering to the image.
	(randomThresholdChannel): New method to apply random thresholding
	or ordered dithering to the specified image channels.
	(sharpenChannel): New method to sharpen a specified image channel.
	(unsharpmaskChannel): New method to unsharpmask a specified image
	channel.

2008-06-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (quantize): Error measurement support was being
	performed incorrectly.  SyncImage() is not needed here.

2008-05-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* demo/demo.cpp (main): Fix segmentation parameters so they are
	more suitable for our image.

2008-04-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (depth): Remove 8/16/32 restriction on depth value.
